# DetectiFi

./: README.md
Models/: clip_classifier_epoch1.pth  test.ipynb  test_clip.py  train_clip.py
Models/.ipynb_checkpoints/: test-checkpoint.ipynb
backend/: .env  package-lock.json  package.json  server.js
backend/config/: db.js
backend/controllers/: authController.js
backend/middleware/: auth.js
backend/models/: AnalysisResult.js  User.js
backend/routes/: auth.js  protected.js
backend/utils/: sendEmail.js
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/: Acco.jsx  AnalysisDisplay.jsx  Contributors.jsx  DarkModeToggle.jsx  Dashboard.jsx  Features.jsx  FileUploadArea.jsx  Footer.jsx  HeroSection.jsx  LineSeparator.jsx  LoginForm.jsx  LoginModal.jsx  Navbar.jsx  PastAnalysesModal.jsx  PrivateRoute.jsx  ProcessingModeSelector.jsx  SignupModal.jsx  UserProfile.jsx  WebcamStreamer.jsx
frontend/src/context/: DarkModeContext.jsx
frontend/src/lib/: auth.js
frontend/src/pages/: Homepage.jsx
model/: .gitignore  clip_pipeline.py  main.py  pyproject.toml  script.py  test.py  yolov8_training.ipynb
models/: app.py  labels.json  main.py  pyproject.toml
