[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "transformers>=4.52.3",
    "ultralytics>=8.3.146",
    "uvicorn[standard]>=0.34.2",
]
